added image perfect.jpg

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     .piece {
       cursor: grab;
-      background-image: url("UDAAN.jpg"); /* replace with your own 300×300 image */
+      background-image: url("perfect.jpg"); /* replace with your own 300×300 image */
       background-size: calc(var(--cols) * var(--size))
         calc(var(--rows) * var(--size));
       user-select: none;
